--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="icon" href="#">
+<link rel="icon" 
+      type="image/png" 
+      href="img/arsh.png">
 <title>அrsh</title>
 <!-- CSS -->
 <link href="css/style.css" rel="stylesheet">
@@ -33,7 +35,7 @@
     <nav>
         <ul>
            <li><a href="index.html">Home</a></li>
-           <li><a href="blog.html">Blog</a></li>
+           <li><a href="#">Coming Soon</a></li>
            <li><a target="_blank" href="https://www.eiwon.net">-About-</a></li>
        </ul>
    </nav>
@@ -52,9 +54,9 @@
 	<section class="background">
 	<div class="content-wrapper">
 		<div class="intro">
-			<h1><span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">1044 Madison Avenue, New York, NY 10075, US</span>
-			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s">Beauttio</span><br/>
-			<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">- HAIR SALON -</span>
+			<h1><span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">Arsh, UK</span>
+			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s"><img src="img/arsh.png" width="300px"></img></span><br/>
+			<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">~~~</span>
 			</h1>
 		</div>
 	</div>
@@ -64,11 +66,11 @@
 		<div class="about">
 			<div class="aboutbadge">
 				<span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><br/>
-				<span class="border">Awarded Salon</span><br/>
-				Est. 2007</span>
+				<span class="border">Bespoke Designs</span><br/>
+				Est. 2020</span>
 			</div>
 			<div class="aboutbadge black">
-				<span>Upbeat, chic, and funky salon. We are based on twenty-five years of experience. We specialize in couture cuts and blowouts, men's cuts, natural and funky hair colors, and highlights. </span>
+				<span>"Fashion you can buy, but style you possess. The key to style is learning who you are, which takes years. There's no how-to road map to style. It's about self expression and, above all, attitude." —Iris Apfel </span>
 			</div>
 		</div>
 	</div>
@@ -77,7 +79,7 @@
 	<div class="content-wrapper">
 		<div class="voucher">
 			<div class="voucher-whitetransparent">
-				<h2><i class="fa fa-gift"></i><br/>REDEEM YOUR VOUCHER<br/>20% OFF IN 2016<br/><a href="#slide6">Book Now</a></h2>
+				<h2><i class="fa fa-gift"></i><br/>REDEEM YOUR VOUCHER<br/>20% OFF IN 2021<br/><a href="#slide6">Claim Now</a></h2>
 			</div>
 		</div>
 	</div>
@@ -89,35 +91,23 @@
 			<ul class="pricing_menu__list">
 				<li class="pricing_menu__row">
 				<div class="pricing_menu__meal">
-					<span>Haircut & Blowdry</span>
+					<span>Saree tops</span>
 				</div>
-				<span class="pricing_menu__price">$32.00</span>
+				<span class="pricing_menu__price">£32.00</span>
 				</li>
 				<li class="pricing_menu__row">
 				<div class="pricing_menu__meal">
-					<span>Express Cut</span>
+					<span>Skirts</span>
 				</div>
-				<span class="pricing_menu__price">$22.00</span>
+				<span class="pricing_menu__price">£22.00</span>
 				</li>
 				<li class="pricing_menu__row">
 				<div class="pricing_menu__meal">
-					<span>Shampoo & Set</span>
+					<span>Tops</span>
 				</div>
-				<span class="pricing_menu__price">$19.00</span>
+				<span class="pricing_menu__price">£43.00</span>
 				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Bleach & Tone</span>
-				</div>
-				<span class="pricing_menu__price">$90.00</span>
-				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Foil with Haircut</span>
-				</div>
-				<span class="pricing_menu__price">$43.00</span>
-				</li>
-				<a class="fullpricelist" href="#"><i class="fa fa-file-pdf-o"></i> View our full pricing list</a>
+				<a class="fullpricelist" href="#"><i class="fa fa-file-pdf-o"></i> View our full catalog</a>
 			</ul>
 		</div>
 	</div>
@@ -127,10 +117,10 @@
 		<div class="testimonialarea">
 			<div class="testimonialarea-bubble">
 				<div class="testimonial-widget">
-					<h3 class="uppercase">BEAUTTIO MADE ME BEAUTIFUL</h3>
+					<h3 class="uppercase">Customer Testimony</h3>
 					<div class="testimonial">
 						<p>
-							 "They took care of my wedding, everyone asked me who was my stylist. Great prices, great staff!"
+							 "Style is a way to say who you are without having to speak."
 						</p>
 						<p>
 							<strong>Cindy, New York</strong>
@@ -138,7 +128,7 @@
 					</div>
 					<div class="testimonial">
 						<p>
-							 "I am a regular customer of their services, once I pay them a visit I am a different person."
+							 "Style is a way to say who you are without having to speak."
 						</p>
 						<p>
 							<strong>Layana, Munchen</strong>
@@ -146,7 +136,7 @@
 					</div>
 					<div class="testimonial">
 						<p>
-							 "Thank you so much, Beauttio, you have one of the best hairstylists aroung, I give it 5 <i class="fa fa-star"></i>."
+							 "Style is a way to say who you are without having to speak." <i class="fa fa-star"></i>."
 						</p>
 						<p>
 							<strong>Jane, London</strong>
@@ -157,7 +147,7 @@
 				</div>
 			</div>
 			<div class="contactform-bubble">
-				<form autocomplete="off" class="contactform" method="post" action="contact.php" id="contactform">
+				<form autocomplete="off" class="contactform" method="post" action="contact@arsh.uk" id="contactform">
 					<input name="name" type="text" placeholder="Name">
 					<input name="email" type="text" placeholder="E-mail">
 					<textarea name="comment" placeholder="Message" rows="4"></textarea>
@@ -171,7 +161,7 @@
 			</div>
 			<div class="contactaddress-bubble">
 				<div class="contactaddress">
-					 1044 Madison Avenue, New York, NY 10075, US<br/>
+					 Hertfordshiry, UK<br/>
 					<a class="map" href="#">Map</a>
 				</div>
 			</div>
