--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 </a>
 
 <div class="fixedcallicon">
-	<i class="fa fa-email"></i><span class="hide">Contact - arsh@eiwon.com</span>
+	<i class="fa fa-envelope"></i><span class="hide">Contact - arsh@eiwon.com</span>
 </div>
 <div class="container">
 	<section class="background">
 	<div class="content-wrapper">
 		<div class="intro">
 			<h1><span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">Arsh, UK</span>
-			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s"><img src="img/arsh.png" width="300px"></img></span><br/>
+			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s"><img src="img/aarsh.png" width="300px"></img></span><br/>
 			<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">~~~</span>
 			</h1>
 		</div>
@@ -161,7 +161,7 @@
 			</div>
 			<div class="contactaddress-bubble">
 				<div class="contactaddress">
-					 Hertfordshiry, UK<br/>
+					 Hertfordshire, UK<br/>
 					<a class="map" href="#">Map</a>
 				</div>
 			</div>
