--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <body class="frontpage">
 
 <div id="loader-wrapper">
+
 <div id="loader"></div>
-<div class="loader-section section-left"></div>
-<div class="loader-section section-right"></div>
+<img src="img/arsh.png" width="100px" style="top: 50%;left: 50%;position: absolute;transform: translate(-50%, -50%);z-index:99999;"></img>
+<div class="loader-section section-left"  style="w1idth: 100%;"></div>
+<div class="loader-section section-right" style="wi1dth: 0%;"></div>
 </div>
 
 
@@ -160,6 +162,7 @@
 				</form>
 			</div>
 			<div class="contactaddress-bubble">
+			<img src="img/aarsh.png" width="300px"></img>
 				<div class="contactaddress">
 					 Hertfordshire, UK<br/>
 					<a class="map" href="#">Map</a>
