--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="container">
 	<section class="background">
 	<div class="content-wrapper">
-		<div class="intro">
+		<div class="intro"><br/><br/>
 			<h1><span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">Arsh, UK</span>
 			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s"><img src="img/aarsh.png" width="300px"></img></span><br/>
 			<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">~~~</span>
@@ -162,8 +162,8 @@
 				</form>
 			</div>
 			<div class="contactaddress-bubble">
-			<img src="img/aarsh.png" width="300px"></img>
-				<div class="contactaddress">
+			
+				<div class="contactaddress"><img src="img/arsh.png" width="80px"></img>
 					 Hertfordshire, UK<br/>
 					<a class="map" href="#">Map</a>
 				</div>
